[gd_scene load_steps=27 format=3 uid="uid://bqpm2tdrb07l2"]

[ext_resource type="Script" path="res://Player.gd" id="1_ltf0l"]
[ext_resource type="PackedScene" uid="uid://dfltsmkf002ly" path="res://pistol.tscn" id="2_qyc0g"]
[ext_resource type="ArrayMesh" uid="uid://b5kthf02xv1i7" path="res://PlayerCusok/Rig.obj" id="3_o70ts"]
[ext_resource type="ArrayMesh" uid="uid://d2xojukdy65h7" path="res://PlayerCusok/Player/Rig.obj" id="4_l6ms3"]
[ext_resource type="Texture2D" uid="uid://db3hli0y7jxed" path="res://Pistol/Patrons.png" id="4_ucgdf"]
[ext_resource type="Texture2D" uid="uid://cw73t3fjel6bc" path="res://chr_knight/EnemyIcon.png" id="5_ldth0"]
[ext_resource type="AudioStream" uid="uid://ifnjxamjcq0v" path="res://PlayerCusok/jumpLand.ogg" id="5_x2wk8"]
[ext_resource type="AudioStream" uid="uid://cyqx2svym0m24" path="res://robotsfk.ogg" id="6_kftqd"]
[ext_resource type="Texture2D" uid="uid://bbdrdhk425k7b" path="res://Levels/HpBar.png" id="7_77vx1"]
[ext_resource type="FontFile" uid="uid://m08ufkuyn4ls" path="res://Levels/Izvestija.ttf" id="9_qb5te"]
[ext_resource type="ArrayMesh" uid="uid://c0jolo21p4nv7" path="res://PlayerCusok/Player/Head.obj" id="11_pe5vc"]
[ext_resource type="ArrayMesh" uid="uid://dsdats1bxhu0y" path="res://PlayerCusok/Player/Torso.obj" id="12_e3qsn"]
[ext_resource type="ArrayMesh" uid="uid://cqa3vc24c8v8t" path="res://PlayerCusok/Player/Leg.obj" id="13_v5mx7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0nibf"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_g5o52"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="LabelSettings" id="LabelSettings_2s3dd"]
font_size = 48

[sub_resource type="Animation" id="Animation_cimpo"]
resource_name = "Fade_In"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_2v6qw"]
resource_name = "Fade_In_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hv4ld"]
resource_name = "Stand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xv6dt"]
_data = {
"Fade_In": SubResource("Animation_cimpo"),
"Fade_In_2": SubResource("Animation_2v6qw"),
"Stand": SubResource("Animation_hv4ld")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_2eb7g"]

[sub_resource type="LabelSettings" id="LabelSettings_35wi1"]
font = ExtResource("9_qb5te")
font_size = 200
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jgv41"]
albedo_color = Color(0.113725, 0.160784, 0.301961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1j16q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_itpmh"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tgnw4"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_ltf0l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00703, 0)
visible = false
mesh = SubResource("CapsuleMesh_0nibf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.66859, 0, 0, 0, 2.28787, 0, 0, 0, 1.79695, 0, 2.1019, 0)
shape = SubResource("ConvexPolygonShape3D_g5o52")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.22879, -0.587481)

[node name="Pistol" parent="Head/Camera3D" instance=ExtResource("2_qyc0g")]
transform = Transform3D(0.544784, 0, 0, 0, 0.555907, 0, 0, 0, 0.53567, -0.801482, -0.668247, -1.41442)

[node name="Rig2" type="MeshInstance3D" parent="Head/Camera3D/Pistol"]
transform = Transform3D(-1.83559, 0, 0, 0, 7.86308e-08, -1.79886, 0, 1.86682, 8.16014e-08, 1.39279, 1.35544, -2.63899)
mesh = ExtResource("4_l6ms3")
skeleton = NodePath("../../../..")

[node name="3hed" type="Camera3D" parent="Head"]
transform = Transform3D(-0.970046, -0.233089, 0.0684128, -0.152597, 0.803819, 0.574968, -0.18901, 0.547306, -0.81531, -0.0478808, 2.71256, -2.28518)
visible = false

[node name="Pistol" parent="Head" instance=ExtResource("2_qyc0g")]
transform = Transform3D(0.544784, 0, 0, 0, 0.555907, 0, 0, 0, 0.53567, -0.317383, 1.11665, -1.20262)
visible = false

[node name="Rig" type="MeshInstance3D" parent="Head/Pistol"]
transform = Transform3D(1.83559, 0, 0, 0, -7.86308e-08, -1.79886, 0, 1.86682, -8.16013e-08, 1.22881, 0.754902, -2.77983)
mesh = ExtResource("3_o70ts")
skeleton = NodePath("../../..")

[node name="LegOther" type="Node3D" parent="Head"]
transform = Transform3D(0.775582, 0, 0, 0, -3.39018e-08, 0.590432, 0, -0.775582, -2.58086e-08, 0.541803, 0.11395, 0.267496)

[node name="Rig" type="MeshInstance3D" parent="Head/LegOther"]
transform = Transform3D(1.28935, 0, 0, 0, -5.63595e-08, -1.28935, 0, 1.69368, -7.4033e-08, -0.456257, 0.933509, -1.34299)
mesh = ExtResource("4_l6ms3")
skeleton = NodePath("../../..")

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x2wk8")
volume_db = 12.876

[node name="Jump2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kftqd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpenE" type="Label" parent="Control"]
layout_mode = 0
offset_left = 579.0
offset_top = 583.0
offset_right = 812.0
offset_bottom = 650.0
text = "E Турель
R Мина"
label_settings = SubResource("LabelSettings_2s3dd")

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 59.0
offset_top = 547.0
offset_right = 99.0
offset_bottom = 570.0
scale = Vector2(3.45522, 3.307)
theme_override_font_sizes/font_size = 16
text = "ХП"

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 44.0
offset_top = 618.0
offset_right = 68.0
offset_bottom = 636.0
scale = Vector2(11.8024, 3.35964)
color = Color(0.0980392, 0.596078, 0.180392, 1)

[node name="White" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -34.0
offset_top = -42.0
offset_right = 1342.0
offset_bottom = 784.0
color = Color(0, 0, 0, 0)

[node name="Move" type="AnimationPlayer" parent="Control/White"]
libraries = {
"": SubResource("AnimationLibrary_xv6dt")
}

[node name="HpBar" type="Sprite2D" parent="Control"]
z_index = -1
position = Vector2(174, 612)
scale = Vector2(0.936657, 0.83134)
texture = ExtResource("7_77vx1")

[node name="Black" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -33.0
offset_top = -55.0
offset_right = 1343.0
offset_bottom = 771.0
color = Color(1, 1, 1, 0)

[node name="Move" type="AnimationPlayer" parent="Control/Black"]
libraries = {
"": SubResource("AnimationLibrary_xv6dt")
}

[node name="ColisonItem" type="Area3D" parent="."]
transform = Transform3D(3.58468, 0, 0, 0, 1.8273, 0, 0, 0, 4.53601, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ColisonItem"]
transform = Transform3D(2.60323, 0, 0, 0, 2.45092, 0, 0, 0, 2.50578, 0, 1.14388, 0)
shape = SubResource("SphereShape3D_2eb7g")

[node name="Patrons" type="Sprite2D" parent="."]
position = Vector2(108, 419)
scale = Vector2(0.516055, 0.509878)
texture = ExtResource("4_ucgdf")

[node name="Label" type="Label" parent="Patrons"]
offset_left = 100.764
offset_top = -94.1402
offset_right = 439.764
offset_bottom = 172.86
text = "A/N"
label_settings = SubResource("LabelSettings_35wi1")

[node name="TimerRestart" type="Timer" parent="."]

[node name="EnemyIcon" type="Sprite2D" parent="."]
visible = false
position = Vector2(1019, 81)
scale = Vector2(0.554521, 0.527286)
texture = ExtResource("5_ldth0")

[node name="Label" type="Label" parent="EnemyIcon"]
offset_left = 135.252
offset_top = -11.379
offset_right = 453.252
offset_bottom = 134.621
text = "A/N"
label_settings = SubResource("LabelSettings_35wi1")

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOverButton" type="Button" parent="GameOver"]
layout_mode = 0
offset_left = 415.0
offset_top = 377.0
offset_right = 684.0
offset_bottom = 459.0
text = "Try Again
"

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 327.0
offset_top = 238.0
offset_right = 761.0
offset_bottom = 423.0
theme_override_font_sizes/font_size = 80
text = "Game Over
"

[node name="DamageRed" type="ColorRect" parent="."]
visible = false
offset_left = -21.0
offset_top = -40.0
offset_right = 1310.0
offset_bottom = 757.0
color = Color(0.835294, 0.156863, 0.2, 0.635294)

[node name="Torse" type="Node3D" parent="."]
visible = false

[node name="Leg" type="Node3D" parent="Torse"]
transform = Transform3D(0.756772, 0, 0, 0, 0.756772, 0, 0, 0, 0.756772, 0.032678, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Torse/Leg"]
transform = Transform3D(0.341894, 0, 0, 0, 1, 0, 0, 0, 0.302831, 0.188408, 0.546664, 0)
material_override = SubResource("StandardMaterial3D_jgv41")
mesh = SubResource("BoxMesh_1j16q")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Torse/Leg"]
transform = Transform3D(0.388128, 0, 0, 0, 0.238792, 0, 0, 0, 0.493778, 0.164639, 0.150225, -0.0620217)
material_override = SubResource("StandardMaterial3D_itpmh")
mesh = SubResource("BoxMesh_tgnw4")

[node name="Leg2" type="Node3D" parent="Torse"]
transform = Transform3D(0.756772, 0, 0, 0, 0.756772, 0, 0, 0, 0.756772, -0.314244, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Torse/Leg2"]
transform = Transform3D(0.341894, 0, 0, 0, 1, 0, 0, 0, 0.302831, 0.188408, 0.546664, 0)
material_override = SubResource("StandardMaterial3D_jgv41")
mesh = SubResource("BoxMesh_1j16q")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Torse/Leg2"]
transform = Transform3D(0.388128, 0, 0, 0, 0.238792, 0, 0, 0, 0.493778, 0.164639, 0.150225, -0.0620217)
material_override = SubResource("StandardMaterial3D_itpmh")
mesh = SubResource("BoxMesh_tgnw4")

[node name="Head2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.177861, -0.850951, -0.715994)
mesh = ExtResource("11_pe5vc")

[node name="Torso" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.202298, -0.681508, -0.5815)
mesh = ExtResource("12_e3qsn")

[node name="Leg" type="MeshInstance3D" parent="."]
transform = Transform3D(0.648083, 0, 0, 0, 0.648083, 0, 0, 0, 0.648083, 0.719367, 0.0392248, -0.385587)
mesh = ExtResource("13_v5mx7")

[node name="Leg2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.648083, 0, 0, 0, 0.648083, 0, 0, 0, 0.648083, 0.236917, 0.0392248, -0.385587)
mesh = ExtResource("13_v5mx7")

[connection signal="area_entered" from="ColisonItem" to="." method="_on_colison_item_area_entered"]
[connection signal="body_entered" from="ColisonItem" to="." method="_on_colison_item_body_entered"]
[connection signal="body_exited" from="ColisonItem" to="." method="_on_colison_item_body_exited"]
[connection signal="pressed" from="GameOver/GameOverButton" to="." method="_on_game_over_button_pressed"]
